install(FILES	add.png
		add_group.png
		button_cancel.png
		button_ok.png
		close.png
		configure.png
		connect.png
		connect_to_network.png
		delete.png
		disconnect.png
		down.png
		edittrash.png
		exec_zoom.png
		exit.png
		export.png
		fileopen.png
		filesave.png
		filesaveas.png
		folder.png
		graphic.png
		graphicon.png
		host.png
		icon.png
		iconadder.png
		in.png
		info.png
		inout.png
		launch.png
		mgenicon.png
		module.png
		netmeterlogo.png
		netperf.png
		network.png
		network2.png
		no.png
		ok.png
		out.png
		reload.png
		remove-red.png
		remove.png
		restore_zoom.png
		host_router.png
		run.png
		statistic.png
		sync.png
		test.png
		trace.png
		trend.png
		up.png
		xaxis.png
		yaxis.png
		converter.png
        DESTINATION ${ICON_DIR}
)
