add_subdirectory(libnmgtrace)
add_subdirectory(libnmgmgen)
#add_subdirectory(libnmgoreneta)
add_subdirectory(libnmggraph)
#add_subdirectory(libnmgsnooper)
add_subdirectory(libnmgconverter)
add_subdirectory(libnmgnetperf)
add_subdirectory(libnmgsimulator)
add_subdirectory(libnmgstatistic)
add_subdirectory(libnmgsync)
#add_subdirectory(examples)
